# ochami-rs

./: .gitignore  Cargo.toml
docs/superpowers/plans/: 2026-07-12-remove-socks5.md
docs/superpowers/specs/: 2026-07-12-remove-socks5-design.md
src/: authentication.rs  backend_connector.rs  http.rs  lib.rs
src/bss/: http_client.rs
src/hsm/component/: http_client.rs
src/hsm/defaults/node_map/: http_client.rs
src/hsm/group/: http_client.rs  utils.rs
src/hsm/inventory/: types.rs
src/hsm/inventory/ethernet_interfaces/: http_client.rs  types.rs
src/hsm/inventory/hardware/: http_client.rs
src/hsm/inventory/hardware_by_fru/: http_client.rs
src/hsm/inventory/redfish_endpoint/: http_client.rs  types.rs
src/hsm/memberships/: http_client.rs
src/hsm/node_map/: http_client.rs
src/hsm/partition/: http_client.rs
src/hsm/state/components/: http_client.rs
src/node/: utils.rs
src/pcs/power_cap/: http_client.rs  types.rs
src/pcs/power_status/: http_client.rs  types.rs
src/pcs/transitions/: http_client.rs  types.rs
