[package]
authors = ["Manuel Sopena Ballesteros <msopena@cscs.ch>"]
name = "ochami-rs"
description = "Rust bindings for OCHAMI backend"
version = "0.1.71"
edition = "2021"
license-file = "LICENSE"
documentation = "https://github.com/OpenCHAMI/ochami-rs/blob/main/README.md"
homepage = "https://github.com/OpenCHAMI/ochami-rs/blob/main/README.md"
repository = "https://github.com/OpenCHAMI/ochami-rs"

[dependencies]
futures-io = "0.3.31"
# futures = { version = "0.3.28", default-features = false }
hostlist-parser = "0.1.6"
log = "0.4.27"
manta-backend-dispatcher = "0.1.69"
# manta-backend-dispatcher = { path = "../manta-backend-dispatcher" } # Only for development purposes
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", default-features = false }
serde_yaml = "0.9.34"
strum_macros = "0.27.1"
strum = { version = "0.27.1", default-features = false }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", default-features = false }
